lab1/Test/L1-A-5-84.cmm
int ibKHLhFyN_OYslDED3 ( struct zZsF3 H , int ernDKRn 
  ) {
  if ! Vhfwqk = LXvIZ )   if ( Rm6yERivGVU )   D ;


{
  }}
struct hsXU0_PBqeJz hgkW2xkWLX7Ew ( ) {
  float KizoQKFGJf5LBCj [ 336412137 ] [ 1421950125 
    ] = TVZ ;
  int Pkr2bMzewJJ = nOJRiantSa8p ;
  while ( zPI_kuwmv2vJdXl )   PDU4s_EEHn ;
&
  if ( ecaJlqmBNEN )   ahai_gKnUUqsE2cG ;
else   if ( NqOsyuml3 )   if ( do   if ( l6 )   if 
    ( I73q3iVgDyOkcJXN   if ( KUHrKNeMjiS5 )   if ( MvQITR7NKn 
    )   if ( WeJggZP3bgT8r )   gHr70 ;








}
float ppLYpD ( float b1U1rMnw__o [ 1449911730 ] , 
  int rUUau5 ) {
}
